# Aixel-Labs

./: .dockerignore  .gitignore  .lintstagedrc.js  Dockerfile  IMPLEMENTATION_SUMMARY.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.cursor/rules/: lead-generation.mdc
app/: layout.tsx  page.tsx
app/LGS/: page.tsx
app/gmaps/: page.tsx
app/lead-generation/: README.md
app/messaging/: page.tsx  types.ts
app/web-dialer/: page.tsx
backend/: package.json  tsconfig.json
backend/scripts/: google-trends-api-smoke.ts  youtube-suggest-api-smoke.ts  youtube-transcript-api-smoke.ts
backend/src/: config.ts  index.ts  routes.ts  server.ts  setup.sh
browser-worker/: .dockerignore  .env.example  Dockerfile  package.json  tsconfig.json
browser-worker/src/: config.ts  routes.ts  server.ts
components/: app-sidebar.tsx
frontend/: .env.example  .env.local.example  AGENTS.md  CHANGES_SUMMARY.md  MONGODB_SETUP.md  QUICK_REFERENCE.md  README.md  auth.ts  components.json  flags.ts  middleware.ts  next.config.ts  package.json  prettier.config.cjs  vercel.json
helpers/: get-be-url.ts
hooks/: use-ec2-manager.ts  use-sidebar.ts
lib/: aws-ec2-manager.ts
patches/: node-tls-client@2.1.0.patch
scraper/: .env.example  config.py  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
scraper/api/: __init__.py  responses.py
scraper/api/google_search/: __init__.py  handler.py  helpers.py
scraper/api/health/: __init__.py  handler.py
scraper/api/instagram/: __init__.py  handler.py  helpers.py
(+872 files in other folders)
